--- a/style.css
+++ b/style.css
@@ -1,13 +1,23 @@
-.main {
+.container {
     display: grid;
+    
     gap: 10px;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: minmax(100px, auto);
     grid-template-areas:
-    "hd hd hd hd hd hd "
-    "ls list list list list rs"
-    "ls list list list list rs"
-    "ft ft ft ft ft ft";
+    "hd"
+    "ls"
+    "main"
+    "rs"
+    "ft";
+    
+}
+
+main {
+    /* display: grid;
+    gap: 10px; */
+    grid-area: main;
+    display: flex;
+    justify-content: center;
+
 }
 
 .listing {
@@ -15,8 +25,7 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     list-style: none;
     gap: 10px;
-    grid-area: "list";
-}
+    }
 
 .listing li {
     border: 2px solid orange;
@@ -52,23 +61,55 @@
 .header {
     border: 2px solid orange;
     text-align: center;
-    grid-area: "hd";
+    grid-area: hd;
+    height: 50px;
+    font-size: 25px;
 }
 
 .rs {
     border: 2px solid orange;
     text-align: center;
-    grid-area: "rs";
+    grid-area: rs;
 }
 
 .ls {
     border: 2px solid orange;
     text-align: center;
-    grid-area: "ls";
+    grid-area: ls;
 }
 
 .footer {
     border: 2px solid orange;
     text-align: center;
-    grid-area: "ft";
+    grid-area: ft;
+    font-size: 25px;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        /* grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: minmax(100px, auto); */
+    grid-template-areas:
+    "hd hd"
+    "ls main"
+    "ft ft";
+    }
+
+    .rs {
+        display:none;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+        /* grid-template-columns: repeat(6, 1fr);*/
+    /* grid-auto-rows: minmax(100px, auto);  */
+    grid-template-areas:
+    "hd hd hd"
+    "ls main rs"
+    "ft ft ft";
+    }
+    .rs {
+        display:block;
+    }
 }
