--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ main {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     list-style: none;
     gap: 10px;
+    justify-content: center;
     }
 
 .listing li {
-    border: 2px solid orange;
+    border: 5px solid orange;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -83,6 +84,12 @@ main {
     text-align: center;
     grid-area: ft;
     font-size: 25px;
+}
+
+.foto{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
 }
 
 @media screen and (min-width: 768px) {
